tests/ui/contract/fail/empty_mod.rs
#[openbrush::contract]
mod base_psp22 {
}

fn main() {}